src/partials/Hud/Hud.css
.main {
  user-select: none;
  font-size: 1.2rem;
}

.selectedDate,
.cardTH,
.cardNL,
.indicator,
.minTemp,
.maxTemp {
  position: absolute;
}

.cardTH,
.cardNL {
  width: 100%;
}

.cardTH {
  top: 0;
  left: 0;
}

.cardNL {
  bottom: 0;
  right: 0;
}

.indicator {
  left: 50%;
  top: 130px;
  transform: translateX(-50%);
}

.selectedDate {
  display: block;
  width: 100%;
  text-align: center;
  top: 54%;
  text-transform: uppercase;
  color: #aaa;
}

.minTemp,
.maxTemp {
  left: 53%;
  opacity: 0.6;
}

.minTemp {
  top: 47.5%;
}

.maxTemp {
  top: 21.5%;
}

